Refactor: 컨트롤러 반환값 ResponseEntity로 변경